--- a/lang/uk.json
+++ b/lang/uk.json
@@ -21,7 +21,8 @@
         "FIELDCANTBEEMPTY": "Це поле не може бути порожнім",
         "AUTHVIAGOOGLE" : "Увійти через Google",
         "DESCRIPTION" : "Опис",
-        "BIRTHDATE" : "Дата народження"
+        "BIRTHDATE" : "Дата народження",
+        "SEARCH" : "Пошук"
 
     }
 }
